Variable names refactor